--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.2.89" !default;
+$mdi-version:          "3.3.92" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -67,6 +67,7 @@ $mdi-icons: (
     "account-supervisor": FA8A,
     "account-supervisor-circle": FA8B,
     "account-switch": F019,
+    "account-tie": FCBF,
     "accusoft": F849,
     "adjust": F01A,
     "adobe": F935,
@@ -91,11 +92,15 @@ $mdi-icons: (
     "album": F025,
     "alert": F026,
     "alert-box": F027,
+    "alert-box-outline": FCC0,
     "alert-circle": F028,
     "alert-circle-outline": F5D6,
     "alert-decagram": F6BC,
+    "alert-decagram-outline": FCC1,
     "alert-octagon": F029,
+    "alert-octagon-outline": FCC2,
     "alert-octagram": F766,
+    "alert-octagram-outline": FCC3,
     "alert-outline": F02A,
     "alien": F899,
     "all-inclusive": F6BD,
@@ -236,6 +241,7 @@ $mdi-icons: (
     "amazon-alexa": F8C5,
     "amazon-drive": F02E,
     "ambulance": F02F,
+    "ammunition": FCC4,
     "ampersand": FA8C,
     "amplifier": F030,
     "anchor": F031,
@@ -300,6 +306,8 @@ $mdi-icons: (
     "arrow-down-bold-hexagon-outline": F049,
     "arrow-down-bold-outline": F9BE,
     "arrow-down-box": F6BF,
+    "arrow-down-circle": FCB7,
+    "arrow-down-circle-outline": FCB8,
     "arrow-down-drop-circle": F04A,
     "arrow-down-drop-circle-outline": F04B,
     "arrow-down-thick": F046,
@@ -320,6 +328,8 @@ $mdi-icons: (
     "arrow-left-bold-hexagon-outline": F051,
     "arrow-left-bold-outline": F9BF,
     "arrow-left-box": F6C0,
+    "arrow-left-circle": FCB9,
+    "arrow-left-circle-outline": FCBA,
     "arrow-left-drop-circle": F052,
     "arrow-left-drop-circle-outline": F053,
     "arrow-left-right-bold-outline": F9C0,
@@ -333,6 +343,8 @@ $mdi-icons: (
     "arrow-right-bold-hexagon-outline": F058,
     "arrow-right-bold-outline": F9C1,
     "arrow-right-box": F6C1,
+    "arrow-right-circle": FCBB,
+    "arrow-right-circle-outline": FCBC,
     "arrow-right-drop-circle": F059,
     "arrow-right-drop-circle-outline": F05A,
     "arrow-right-thick": F055,
@@ -353,11 +365,14 @@ $mdi-icons: (
     "arrow-up-bold-hexagon-outline": F061,
     "arrow-up-bold-outline": F9C6,
     "arrow-up-box": F6C2,
+    "arrow-up-circle": FCBD,
+    "arrow-up-circle-outline": FCBE,
     "arrow-up-down-bold-outline": F9C7,
     "arrow-up-drop-circle": F062,
     "arrow-up-drop-circle-outline": F063,
     "arrow-up-thick": F05E,
     "artist": F802,
+    "artist-outline": FCC5,
     "artstation": FB37,
     "aspect-ratio": FA23,
     "assistant": F064,
@@ -465,7 +480,8 @@ $mdi-icons: (
     "battery-unknown-bluetooth": F949,
     "battlenet": FB3C,
     "beach": F092,
-    "beaker": F68F,
+    "beaker": FCC6,
+    "beaker-outline": F68F,
     "beats": F097,
     "bed-empty": F89F,
     "beer": F098,
@@ -494,10 +510,12 @@ $mdi-icons: (
     "bitcoin": F812,
     "black-mesa": F0A9,
     "blackberry": F0AA,
-    "blender": F0AB,
+    "blender": FCC7,
+    "blender-software": F0AB,
     "blinds": F0AC,
     "block-helper": F0AD,
     "blogger": F0AE,
+    "blood-bag": FCC8,
     "bluetooth": F0AF,
     "bluetooth-audio": F0B0,
     "bluetooth-connect": F0B1,
@@ -508,6 +526,7 @@ $mdi-icons: (
     "blur-linear": F0B6,
     "blur-off": F0B7,
     "blur-radial": F0B8,
+    "bolnisi-cross": FCC9,
     "bomb": F690,
     "bomb-off": F6C4,
     "bone": F0B9,
@@ -569,8 +588,12 @@ $mdi-icons: (
     "boxing-glove": FB41,
     "braille": F9CF,
     "brain": F9D0,
+    "bread-slice": FCCA,
+    "bread-slice-outline": FCCB,
     "bridge": F618,
     "briefcase": F0D6,
+    "briefcase-account": FCCC,
+    "briefcase-account-outline": FCCD,
     "briefcase-check": F0D7,
     "briefcase-download": F0D8,
     "briefcase-download-outline": FC19,
@@ -595,6 +618,7 @@ $mdi-icons: (
     "brightness-6": F0DF,
     "brightness-7": F0E0,
     "brightness-auto": F0E1,
+    "brightness-percent": FCCE,
     "broom": F0E2,
     "brush": F0E3,
     "buddhism": F94A,
@@ -604,6 +628,7 @@ $mdi-icons: (
     "bug-check-outline": FA2E,
     "bug-outline": FA2F,
     "bulldozer": FB07,
+    "bullet": FCCF,
     "bulletin-board": F0E5,
     "bullhorn": F0E6,
     "bullhorn-outline": FB08,
@@ -738,6 +763,7 @@ $mdi-icons: (
     "cash-100": F115,
     "cash-multiple": F116,
     "cash-refund": FA9B,
+    "cash-register": FCD0,
     "cash-usd": F117,
     "cassette": F9D3,
     "cast": F118,
@@ -766,6 +792,7 @@ $mdi-icons: (
     "cellphone-sound": F951,
     "cellphone-text": F8D1,
     "cellphone-wireless": F814,
+    "celtic-cross": FCD1,
     "certificate": F124,
     "chair-school": F125,
     "charity": FC2B,
@@ -855,6 +882,7 @@ $mdi-icons: (
     "chili-mild": F7B3,
     "chip": F61A,
     "christianity": F952,
+    "christianity-outline": FCD2,
     "church": F144,
     "circle": F764,
     "circle-edit-outline": F8D4,
@@ -877,9 +905,13 @@ $mdi-icons: (
     "clipboard-account": F148,
     "clipboard-account-outline": FC31,
     "clipboard-alert": F149,
+    "clipboard-alert-outline": FCD3,
     "clipboard-arrow-down": F14A,
     "clipboard-arrow-down-outline": FC32,
     "clipboard-arrow-left": F14B,
+    "clipboard-arrow-left-outline": FCD4,
+    "clipboard-arrow-right": FCD5,
+    "clipboard-arrow-right-outline": FCD6,
     "clipboard-arrow-up": FC33,
     "clipboard-arrow-up-outline": FC34,
     "clipboard-check": F14C,
@@ -1013,6 +1045,8 @@ $mdi-icons: (
     "content-paste": F192,
     "content-save": F193,
     "content-save-all": F194,
+    "content-save-edit": FCD7,
+    "content-save-edit-outline": FCD8,
     "content-save-outline": F817,
     "content-save-settings": F61B,
     "content-save-settings-outline": FB13,
@@ -1081,6 +1115,8 @@ $mdi-icons: (
     "current-ac": F95A,
     "current-dc": F95B,
     "cursor-default": F1B4,
+    "cursor-default-click": FCD9,
+    "cursor-default-click-outline": FCDA,
     "cursor-default-outline": F1B5,
     "cursor-move": F1B6,
     "cursor-pointer": F1B7,
@@ -1093,7 +1129,10 @@ $mdi-icons: (
     "database-lock": FAA9,
     "database-minus": F1B9,
     "database-plus": F1BA,
+    "database-refresh": FCDB,
+    "database-remove": FCDC,
     "database-search": F865,
+    "database-settings": FCDD,
     "death-star": F8D7,
     "death-star-variant": F8D8,
     "deathly-hallows": FB63,
@@ -1195,6 +1234,7 @@ $mdi-icons: (
     "drag-horizontal": F1DC,
     "drag-variant": FB6C,
     "drag-vertical": F1DD,
+    "drama-masks": FCDE,
     "drawing": F1DE,
     "drawing-box": F1DF,
     "dribbble": F1E0,
@@ -1223,6 +1263,7 @@ $mdi-icons: (
     "elevator": F1ED,
     "email": F1EE,
     "email-alert": F6CE,
+    "email-box": FCDF,
     "email-check": FAB0,
     "email-check-outline": FAB1,
     "email-lock": F1F1,
@@ -1294,6 +1335,8 @@ $mdi-icons: (
     "export": F207,
     "export-variant": FB6F,
     "eye": F208,
+    "eye-check": FCE0,
+    "eye-check-outline": FCE1,
     "eye-circle": FB70,
     "eye-circle-outline": FB71,
     "eye-off": F209,
@@ -1317,6 +1360,7 @@ $mdi-icons: (
     "fan": F210,
     "fan-off": F81C,
     "fast-forward": F211,
+    "fast-forward-30": FCE2,
     "fast-forward-outline": F6D1,
     "fax": F212,
     "feather": F6D2,
@@ -1418,6 +1462,7 @@ $mdi-icons: (
     "flask-empty-outline": F095,
     "flask-outline": F096,
     "flattr": F246,
+    "flickr": FCE3,
     "flip-to-back": F247,
     "flip-to-front": F248,
     "floor-lamp": F8DC,
@@ -1426,6 +1471,7 @@ $mdi-icons: (
     "floppy-variant": F9EE,
     "flower": F24A,
     "flower-outline": F9EF,
+    "flower-poppy": FCE4,
     "flower-tulip": F9F0,
     "flower-tulip-outline": F9F1,
     "folder": F24B,
@@ -1452,12 +1498,16 @@ $mdi-icons: (
     "folder-outline": F256,
     "folder-plus": F257,
     "folder-plus-outline": FB79,
+    "folder-pound": FCE5,
+    "folder-pound-outline": FCE6,
     "folder-remove": F258,
     "folder-remove-outline": FB7A,
     "folder-search": F967,
     "folder-search-outline": F968,
     "folder-star": F69C,
     "folder-star-outline": FB7B,
+    "folder-sync": FCE7,
+    "folder-sync-outline": FCE8,
     "folder-text": FC5E,
     "folder-text-outline": FC5F,
     "folder-upload": F259,
@@ -1521,6 +1571,7 @@ $mdi-icons: (
     "format-list-checkbox": F969,
     "format-list-checks": F755,
     "format-list-numbered": F27B,
+    "format-list-numbered-rtl": FCE9,
     "format-page-break": F6D6,
     "format-paint": F27C,
     "format-paragraph": F27D,
@@ -1535,6 +1586,10 @@ $mdi-icons: (
     "format-subscript": F282,
     "format-superscript": F283,
     "format-text": F284,
+    "format-text-wrapping-clip": FCEA,
+    "format-text-wrapping-overflow": FCEB,
+    "format-text-wrapping-wrap": FCEC,
+    "format-textbox": FCED,
     "format-textdirection-l-to-r": F285,
     "format-textdirection-r-to-l": F286,
     "format-title": F5F4,
@@ -1550,6 +1605,8 @@ $mdi-icons: (
     "forum-outline": F821,
     "forward": F28D,
     "fountain": F96A,
+    "fountain-pen": FCEE,
+    "fountain-pen-tip": FCEF,
     "foursquare": F28E,
     "freebsd": F8DF,
     "fridge": F290,
@@ -1702,6 +1759,7 @@ $mdi-icons: (
     "heart-box": F2D2,
     "heart-box-outline": F2D3,
     "heart-broken": F2D4,
+    "heart-broken-outline": FCF0,
     "heart-circle": F970,
     "heart-circle-outline": F971,
     "heart-half": F6DE,
@@ -1746,6 +1804,8 @@ $mdi-icons: (
     "home-assistant": F7CF,
     "home-automation": F7D0,
     "home-circle": F7D1,
+    "home-city": FCF1,
+    "home-city-outline": FCF2,
     "home-currency-usd": F8AE,
     "home-heart": F826,
     "home-lock": F8EA,
@@ -1768,6 +1828,7 @@ $mdi-icons: (
     "hotel": F2E3,
     "houzz": F2E4,
     "houzz-box": F2E5,
+    "hubspot": FCF3,
     "hulu": F828,
     "human": F2E6,
     "human-child": F2E7,
@@ -1923,9 +1984,11 @@ $mdi-icons: (
     "less-than-or-equal": F97C,
     "library": F331,
     "library-books": F332,
+    "library-movie": FCF4,
     "library-music": F333,
     "library-plus": F334,
     "library-shelves": FB85,
+    "library-video": FCF5,
     "lifebuoy": F87D,
     "light-switch": F97D,
     "lightbulb": F335,
@@ -1935,6 +1998,10 @@ $mdi-icons: (
     "lighthouse": F9FE,
     "lighthouse-on": F9FF,
     "link": F337,
+    "link-box": FCF6,
+    "link-box-outline": FCF7,
+    "link-box-variant": FCF8,
+    "link-box-variant-outline": FCF9,
     "link-off": F338,
     "link-plus": FC70,
     "link-variant": F339,
@@ -1980,6 +2047,8 @@ $mdi-icons: (
     "mail-ru": F34C,
     "mailbox": F6ED,
     "map": F34D,
+    "map-clock": FCFA,
+    "map-clock-outline": FCFB,
     "map-legend": FA00,
     "map-marker": F34E,
     "map-marker-check": FC71,
@@ -1989,6 +2058,7 @@ $mdi-icons: (
     "map-marker-multiple": F350,
     "map-marker-off": F351,
     "map-marker-outline": F7D8,
+    "map-marker-path": FCFC,
     "map-marker-plus": F651,
     "map-marker-radius": F352,
     "map-minus": F980,
@@ -2083,6 +2153,7 @@ $mdi-icons: (
     "monitor-dashboard": FA06,
     "monitor-multiple": F37A,
     "more": F37B,
+    "mother-nurse": FCFD,
     "motorbike": F37C,
     "mouse": F37D,
     "mouse-bluetooth": F98A,
@@ -2253,6 +2324,7 @@ $mdi-icons: (
     "origin": FB2B,
     "ornament": F3CF,
     "ornament-variant": F3D0,
+    "outlook": FCFE,
     "owl": F3D2,
     "pac-man": FB8B,
     "package": F3D3,
@@ -2323,6 +2395,8 @@ $mdi-icons: (
     "periodic-table": F8B5,
     "periodic-table-co2": F7E3,
     "periscope": F747,
+    "perspective-less": FCFF,
+    "perspective-more": FD00,
     "pharmacy": F3F1,
     "phone": F3F2,
     "phone-bluetooth": F3F3,
@@ -2402,6 +2476,10 @@ $mdi-icons: (
     "plus-outline": F704,
     "pocket": F41C,
     "podcast": F993,
+    "podium": FD01,
+    "podium-bronze": FD02,
+    "podium-gold": FD03,
+    "podium-silver": FD04,
     "pokeball": F41D,
     "pokemon-go": FA08,
     "poker-chip": F82F,
@@ -2465,6 +2543,7 @@ $mdi-icons: (
     "quality-low": FA0B,
     "quality-medium": FA0C,
     "quicktime": F436,
+    "quora": FD05,
     "rabbit": F906,
     "radar": F437,
     "radiator": F438,
@@ -2526,6 +2605,7 @@ $mdi-icons: (
     "restore": F99A,
     "restore-clock": F6A7,
     "rewind": F45F,
+    "rewind-10": FD06,
     "rewind-outline": F709,
     "rhombus": F70A,
     "rhombus-medium": FA0F,
@@ -2541,6 +2621,8 @@ $mdi-icons: (
     "robot-vacuum": F70C,
     "robot-vacuum-variant": F907,
     "rocket": F463,
+    "roller-skate": FD07,
+    "rollerblade": FD08,
     "rollupjs": FB9C,
     "room-service": F88C,
     "rotate-3d": F464,
@@ -2555,11 +2637,15 @@ $mdi-icons: (
     "rowing": F608,
     "rss": F46B,
     "rss-box": F46C,
+    "ruby": FD09,
     "ruler": F46D,
     "ruler-square": FC9E,
     "run": F70D,
     "run-fast": F46E,
+    "sack": FD0A,
+    "sack-percent": FD0B,
     "safe": FA69,
+    "safety-goggles": FD0C,
     "sale": F46F,
     "salesforce": F88D,
     "sass": F7EB,
@@ -2600,12 +2686,14 @@ $mdi-icons: (
     "security-network": F484,
     "select": F485,
     "select-all": F486,
+    "select-color": FD0D,
     "select-compare": FAD8,
     "select-drag": FA6B,
     "select-inverse": F487,
     "select-off": F488,
     "selection": F489,
     "selection-drag": FA6C,
+    "selection-ellipse": FD0E,
     "selection-off": F776,
     "send": F48A,
     "send-lock": F7EC,
@@ -2656,6 +2744,8 @@ $mdi-icons: (
     "shield-home-outline": FCA7,
     "shield-key": FBA0,
     "shield-key-outline": FBA1,
+    "shield-link-variant": FD0F,
+    "shield-link-variant-outline": FD10,
     "shield-lock": F99C,
     "shield-lock-outline": FCA8,
     "shield-off": F99D,
@@ -2708,6 +2798,9 @@ $mdi-icons: (
     "sim-off": F4A9,
     "sina-weibo": FADE,
     "sitemap": F4AA,
+    "skate": FD11,
+    "skew-less": FD12,
+    "skew-more": FD13,
     "skip-backward": F4AB,
     "skip-forward": F4AC,
     "skip-next": F4AD,
@@ -2766,6 +2859,7 @@ $mdi-icons: (
     "space-invaders": FBA5,
     "speaker": F4C3,
     "speaker-bluetooth": F9A1,
+    "speaker-multiple": FD14,
     "speaker-off": F4C4,
     "speaker-wireless": F71E,
     "speedometer": F4C5,
@@ -2792,6 +2886,7 @@ $mdi-icons: (
     "stack-overflow": F4CC,
     "stadium": F71F,
     "stairs": F4CD,
+    "stamper": FD15,
     "standard-definition": F7EE,
     "star": F4CE,
     "star-box": FA72,
@@ -2893,6 +2988,7 @@ $mdi-icons: (
     "tag-plus": F721,
     "tag-remove": F722,
     "tag-text-outline": F4FD,
+    "tank": FD16,
     "tape-measure": FB28,
     "target": F4FE,
     "target-account": FBAC,
@@ -2980,6 +3076,7 @@ $mdi-icons: (
     "tooth": F8C2,
     "tooth-outline": F529,
     "tor": F52A,
+    "tortoise": FD17,
     "tournament": F9AD,
     "tower-beach": F680,
     "tower-fire": F681,
@@ -2997,10 +3094,13 @@ $mdi-icons: (
     "transcribe": F52E,
     "transcribe-close": F52F,
     "transfer": F530,
+    "transit-connection": FD18,
+    "transit-connection-variant": FD19,
     "transit-transfer": F6AD,
     "transition": F914,
     "transition-masked": F915,
     "translate": F5CA,
+    "transmission-tower": FD1A,
     "trash-can": FA78,
     "trash-can-outline": FA79,
     "treasure-chest": F725,
@@ -3205,6 +3305,7 @@ $mdi-icons: (
     "webpack": F72A,
     "wechat": F611,
     "weight": F5A1,
+    "weight-gram": FD1B,
     "weight-kilogram": F5A2,
     "weight-pound": F9B4,
     "whatsapp": F5A3,
@@ -3280,9 +3381,11 @@ $mdi-icons: (
     "youtube": F5C3,
     "youtube-creator-studio": F846,
     "youtube-gaming": F847,
+    "youtube-subscription": FD1C,
     "youtube-tv": F448,
     "z-wave": FAE9,
     "zend": FAEA,
+    "zigbee": FD1D,
     "zip-box": F5C4,
     "zip-disk": FA22,
     "zodiac-aquarius": FA7C,
